--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_TOKEN=6684389571:AAEtNQ8qHqblUcAPDhdZj7ghUJz1LFTxBxY
-ALPHA_VANTAGE_API_KEY=CJEPKUW2PEYT3YMG
-OPEN_AI_API_KEY= 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
+BOT_TOKEN=
+ALPHA_VANTAGE_API_KEY=
+OPEN_AI_API_KEY= 
